--- a/views/add-user.ejs
+++ b/views/add-user.ejs
@@ -6,13 +6,13 @@
 
 <main>
     <form class="form" action="/add-user" method="POST">
-        <div class="form-control">
+        <div class="formcontrol">
             <label for="firstName">first name</label>
-            <input type="text" name="firstName" placeholder="John">
+            <input class="txtinput" type="text" name="firstName" placeholder="John">
             <label for="lastName">last name</label>
-            <input type="text" name="lastName" placeholder="Doe">
+            <input class="txtinput" type="text" name="lastName" placeholder="Doe">
             <label for="phoneNumber">phone number</label>
-            <input type="text" name="phoneNumber" placeholder="+372 5555 4444">
+            <input class="txtinput" type="text" name="phoneNumber" placeholder="+372 5555 4444">
         </div>
         <button class="btn" type="submit">submit</button>
     </form>
