--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/92c75c5ef5.js" crossorigin="anonymous"></script>
     <title>Phone Book</title>
 </head>
 <body>
